--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
       <button id="btnDrawer" class="iconBtn" title="侧边栏">☰</button>
       <div class="title">JSON List Viewer</div>
     </div>
+    <div class="middle">
+      <button data-key="up">▲</button>
+
+      <div id="gamepad">
+        <div class="dpad">
+        <button data-key="up">▲</button>
+        <button data-key="left">◀</button>
+        <button data-key="right">▶</button>
+        <button data-key="down">▼</button>
+      </div>
+
+      <div class="actions">
+        <button data-key="A">A</button>
+        <button data-key="B">B</button>
+      </div>
+    </div>
+    </div>  
+  </div>
+</div>
     <div class="right">
       <span id="status" class="badge">Ready</span>
       <button id="btnLock" class="iconBtn lockOff" title="锁定触控">🔓</button>
