--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+<div id = "stage">
   <div id="portraitMask" class="portraitMask" aria-hidden="true">
     <div class="portraitCard">
       <div class="portraitTitle">请横屏使用</div>
@@ -40,7 +40,9 @@
       </div>
     </div>
     </div>  
-  </div>
+</div>
+</div>
+</body>
 </div>
     <div class="right">
       <span id="status" class="badge">Ready</span>
