--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <button id="btnClear" class="ghost">清空</button>
       </div>
     </section>
-    <canvas id="c" width="640" height="480"></canvas>
+    <canvas id="c" width="640px" height="480px"></canvas>
  
     <section class="card">
       <div class="cardRow">
